# digitalocean

url-shortener/: .env.example  .gitignore  Dockerfile  FLOW.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
url-shortener/.do/: app.yaml
url-shortener/.github/workflows/: ci.yml  deploy.yml
url-shortener/alembic/: env.py
url-shortener/alembic/versions/: 001_create_short_urls.py
url-shortener/app/: config.py  main.py
url-shortener/app/api/: deps.py
url-shortener/app/api/routes/: redirect.py  urls.py
url-shortener/app/core/: errors.py
url-shortener/app/db/: session.py
url-shortener/app/models/: __init__.py  url.py
url-shortener/app/repositories/: url_repository.py
url-shortener/app/schemas/: url.py
url-shortener/app/services/: alias.py  cache.py  idempotency.py  shortener.py
url-shortener/tests/integration/: conftest.py  test_api.py
url-shortener/tests/unit/: test_alias_and_services.py
